# Swastha

./: .gitignore  README.md  docker-compose.yml
backend/: .env  Dockerfile  auth.py  database.py  main.py  models.py  pdf_processor.py  pyproject.toml  requirements.txt
backend/routes/: upload.py  vitals.py
frontend/: .env.local  README.md  next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.css  page.tsx
frontend/app/dashboard/: page.css  page.tsx
frontend/app/health-score-detail/: page.css  page.tsx
frontend/app/login/: page.css  page.tsx
frontend/app/profile/: page.css  page.tsx
frontend/app/register/: page.css  page.tsx
frontend/app/upload/: page.css  page.tsx
frontend/app/vitals-history/: page.css  page.tsx
frontend/lib/: api.ts
